fix(style): Fix ribbon's responsive behavior #109
On small screens, the ribbon will turn into a box on the top right of
the screen, so it won’t cover the content any more.

Enhancement for issue #109

--- a/app/scss/_ribbon.scss
+++ b/app/scss/_ribbon.scss
@@ -1,48 +1,75 @@
 // Ribbon ---------- //
 
 .ribbon-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  overflow: hidden;
-  width: 200px;
-  height: 200px;
-  z-index: 1000;  /* stay on top */
+  @media screen and (min-width: $xs-screen) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    width: 200px;
+    height: 200px;
+    z-index: 1000;
+  }
 }
 
 /* https://unindented.org/articles/github-ribbon-using-css-transforms/ */
+
 .ribbon {
+  color: $color-white;
   background-color: $color-secondary-darkest;
+  font-size: 1em;
+  font-weight: $font-bold;
+  text-align: center;
+  vertical-align: baseline;
   white-space: nowrap;
-  /* top right corner */
-  position: absolute;
-  right: -50px;
-  top: 50px;
-  /* 45 deg ccw rotation */
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  /* shadow */
-  -webkit-box-shadow: 0 0 10px #888;
-  -moz-box-shadow: 0 0 10px #888;
-  box-shadow: 0 0 10px #888;
+  overflow: hidden;
+  border-radius: .25em;
+  padding: .2em .5em;;
+  display: inline;
+  float: right;
 
   a {
-    border: 1px solid $color-secondary-light;
     color: $color-white;
-    display: block;
-    font: bold 1.4rem/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 1px 0;
-    padding: 10px 50px;
-    text-align: center;
     text-decoration: none;
-    /* shadow */
-    text-shadow: 0 0 5px $color-gray-dark;
-
-    &:hover {
+    font-weight: normal;
+    font-family: $font-sans;
+    transition: color 0.2s ease 0s;
+    &:hover,
+    &:active {
       color: $color-secondary-lightest;
+    }
+  }
+
+  @media screen and (min-width: $xs-screen) {
+    /* top right corner */
+    position: absolute;
+    z-index: 11;
+    right: -60px;
+    top: 47px;
+    padding: 0;
+    font: bold 81.25% 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    /* 45 deg ccw rotation */
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    -webkit-box-shadow: 0 0 10px #888;
+    -moz-box-shadow: 0 0 10px #888;
+    box-shadow: 0 0 10px #888;
+
+    a {
+      border: 1px solid $color-secondary-light;
+      display: block;
+      font-weight: bold;
+      font-size: 1.4rem;
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      margin: 1px 0;
+      padding: 10px 50px;
+      text-align: center;
+      text-decoration: none;
+      /* shadow */
+      text-shadow: 0 0 5px $color-gray-dark;
     }
   }
 }
